# UBI-Framework

./: .gitignore  CMakeLists.txt  README.md
include/math/: utilmath.h
include/math/vector/: vec3.h
src/math/vector/: vec3.c
